freest/test/prog/Invalid/Typing/MultipleParam/MultipleParam.fst
module MultipleParam where

fun : Int -> Int -> Int
fun c c = 23
